<resources>
    <string name="app_name">Sharee</string>

    <!-- Error messages -->
    <string name="internet_failure_error">בעיית חיבור לרשת</string>
    <string name="error_general">אופס! יש לנו תקלה…</string>
    <string name="no_verification_token">חסרה ססמאת אימות</string>

    <!-- Success messages -->
    <string name="submit_poll_success">הסקר נשלח בהצלחה</string>
    <string name="thanks_for_cooperation">תודה על שיתוף הפעולה</string>

    <!-- Drawer strings -->
    <string name="general_polls">סקרים כלליים</string>
    <string name="medical_polls">שאלונים רפואיים</string>
    <string name="daily_routines">לו\"ז שבועי</string>
    <string name="department_info">פרטי המחלקה</string>
    <string name="personal_exercises">תרגילים אישיים</string>
    <string name="about_us">אודות</string>
    <string name="settings">הגדרות</string>

    <!-- OTP sign in -->
    <string name="phone_number">מספר נייד</string>
    <string name="generate_otp">שלח סמס</string>
    <string name="enter_otp">קוד אימות</string>
    <string name="verify_sign_in">המשך</string>
    <string name="enter_phone_number_check_prefix_error" translatable="false">בדוק שוב את הקידומת</string>

    <!-- Actions -->
    <string name="action_notifications" translatable="false">הודעות</string>
    <string name="action_help" translatable="false">עזרה</string>
    <string name="action_cancel" translatable="false">סגור</string>
    <string name="action_back" translatable="false">חזרה</string>
    <string name="action_drawer" translatable="false">תפריט</string>
    <string name="action_settings" translatable="false">הגדרות</string>
    <string name="action_search" translatable="false">חיפוש</string>
    <string name="action_logo" translatable="false">לוגו</string>

    <!-- Polls screen -->
    <string name="polls_screen_default_title" translatable="false">סקרים כלליים</string>
    <string name="polls_screen_secondary_title" translatable="false">שאלונים רפואיים</string>

    <!-- Specific poll screen -->
    <string name="poll_screen_generic_answer_hint" translatable="false">לחץ לבחירת תשובה מתאימה</string>
    <string name="poll_screen_textual_answer_hint" translatable="false">הזן תשובתך כאן</string>

    <!-- Dialogs -->
    <string name="dialog_success_default_title" translatable="false">הצלחה!</string>
    <string name="dialog_positive_ok" translatable="false">אוקיי</string>
    <string name="dialog_negative_cancel" translatable="false">ביטול</string>

    <!-- Notifications -->
    <string name="default_notification_channel_id" translatable="false">defaultChannel</string>

    <!-- Daily routines screen -->
    <string name="daily_routine_screen_default_title" translatable="false">לו"ז שבועי</string>
    <string name="daily_routine_tab_weekday" translatable="false">יום חול</string>
    <string name="daily_routine_tab_weekend" translatable="false">סוף שבוע</string>

    <!-- Department info screen -->
    <string name="department_info_title" translatable="false">אודות המחלקה</string>

    <!-- Main screen -->
    <string name="last_messages">הודעות אחרונות</string>

    <!-- Messages screen -->
    <string name="messages_screen_title">הודעות מהצוות הרפואי</string>

    <!-- About us screen -->
    <string name="our_team">הצוות שלנו</string>
    <string name="our_mission">המשימה שלנו</string>
    <string name="our_mission_info">מטרת העל של הפרויקט היא צמצום חוסר הוודאות של המטופל באשפוז על ידי הנגשת
מידע הנוגע לטיפול הרפואי בו, וזאת באמצעות תקשורת בין אפליקציה סלולרית לבין מערכות המידע הרפואי של בית החולים, אשר מעדכנות באופן שוטף על החלטות טיפוליות רפואיות, תוצאות בדיקות, צפי למשך אשפוז והן מידע כללי אודות המחלקה, בית החולים ועוד.
בנוסף, האפליקציה תאפשר תקשורת דו כיוונית מהמטופל לצוות המטפל בנושאים מוגדרים מראש – וזאת על מנת גם לאפשר למטופל לבוא לידי ביטוי.
</string>

    <!-- Exercise categories screen -->
    <string name="exercise_categories_screen_title">תרגילים אישיים</string>

</resources>
