<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/grp_1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/navGeneralPolls"
            android:icon="@drawable/ic_assignment_black_24dp"
            android:title="@string/general_polls" />
        <item
            android:id="@+id/navMedicalPolls"
            android:icon="@drawable/ic_local_hospital_black_24dp"
            android:title="@string/medical_polls" />
        <item
            android:id="@+id/navDailyRoutines"
            android:icon="@drawable/ic_info_black_24dp"
            android:title="@string/daily_routines" />
        <item
            android:id="@+id/navDepartmentInfo"
            android:icon="@drawable/ic_web_black_24dp"
            android:title="@string/department_info" />
        <item
            android:id="@+id/navPersonalExercises"
            android:icon="@drawable/ic_accessibility_black_24dp"
            android:title="@string/personal_exercises" />
    </group>
    <group
        android:id="@+id/grp_2"
        android:checkableBehavior="none">
        <item
            android:id="@+id/navSettings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="הגדרות" />
        <item
            android:id="@+id/navHelp"
            android:icon="@drawable/ic_help_black_24dp"
            android:title="עזרה" />
    </group>

</menu>
